<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:background="@color/blue_theme"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="34dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/my_progress"

        android:textColor="@color/black"
        android:textSize="27sp" />

    <Button
        android:id="@+id/btn_return"
        android:layout_width="230dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:layout_marginBottom="37dp"

        android:background="@drawable/bg_button"
        android:fontFamily="@font/raleway_semibold"

        android:text="@string/ret"
        android:textAllCaps="false"
        android:textColor="@color/black"

        android:textSize="24sp"
        app:backgroundTint="@color/blue_theme"
        app:cornerRadius="35dp"
        android:onClick="ret"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="35dp">

        <ImageView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"

            android:src="@drawable/volume_up" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"

            android:src="@drawable/gear" />

    </LinearLayout>


</LinearLayout>