<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/navbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"

        android:background="@color/blue_theme"
        android:fontFamily="@font/raleway_semibold"

        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="27sp" />

    <TextView
        android:id="@+id/signin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginTop="34dp"
        android:layout_marginBottom="34dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/sign_in"

        android:textColor="@color/black"
        android:textSize="27sp" />

    <EditText
        android:id="@+id/enter_username"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="34dp"
        android:background="@drawable/bg_input"
        android:drawableStart="@drawable/person_circle"
        android:drawableLeft="@drawable/person_circle"

        android:drawablePadding="30dp"
        android:ems="10"
        android:fontFamily="@font/raleway"

        android:hint="@string/enter_username"
        android:inputType="text"
        android:paddingStart="26dp"
        android:paddingLeft="26dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"

        android:textColorHint="@color/grey_input"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/enter_pw"
        android:layout_width="300dp"
        android:layout_height="59dp"
        android:layout_gravity="center"

        android:layout_marginBottom="46dp"
        android:background="@drawable/bg_input"
        android:drawableLeft="@drawable/lock"
        android:drawablePadding="30dp"

        android:ems="10"
        android:fontFamily="@font/raleway"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:paddingLeft="26dp"
        android:paddingTop="14dp"
        android:paddingBottom="14dp"

        android:textColorHint="@color/grey_input"
        android:textSize="22sp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="230dp"
        android:layout_height="59dp"
        android:layout_gravity="center"

        android:layout_marginBottom="3dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/raleway_semibold"

        android:text="@string/login"
        android:textAllCaps="false"

        android:textColor="@color/black"
        android:textSize="24sp"
        app:backgroundTint="@color/blue_theme"
        app:cornerRadius="35dp" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="35dp"

        android:text="@string/login_error"
        android:textColor="@color/red"
        />

    <TextView
        android:id="@+id/sign_up_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="4dp"
        android:fontFamily="@font/raleway"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="34dp"
        android:fontFamily="@font/raleway"
        android:text="@string/sign_up_underline"
        android:textColor="@color/blue_link"
        android:textColorLink="@color/blue_link"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">

        <ImageView
            android:id="@+id/volume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"

            android:src="@drawable/volume_up" />

        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"

            android:src="@drawable/gear" />

    </LinearLayout>


</LinearLayout>

<!--<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="wrap_content"-->
<!--    tools:context=".MainActivity">-->

<!--    <TextView-->
<!--        android:id="@+id/navbar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="80dp"-->

<!--        android:background="@color/blue_theme"-->
<!--        android:fontFamily="@font/raleway_semibold"-->

<!--        android:gravity="center"-->
<!--        android:text="@string/app_name"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="27sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/signup"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.0"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/signup"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_marginTop="34dp"-->
<!--        android:layout_marginBottom="34dp"-->
<!--        android:fontFamily="@font/raleway_semibold"-->
<!--        android:text="@string/sign_in"-->

<!--        android:textColor="@color/black"-->
<!--        android:textSize="27sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/enter_email"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.498"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/navbar" />-->

<!--    <EditText-->
<!--        android:id="@+id/enter_email"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginLeft="30dp"-->

<!--        android:layout_marginEnd="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:layout_marginBottom="34dp"-->
<!--        android:background="@drawable/bg_input"-->
<!--        android:drawableStart="@drawable/person_circle"-->
<!--        android:drawableLeft="@drawable/person_circle"-->

<!--        android:drawablePadding="30dp"-->
<!--        android:ems="10"-->
<!--        android:fontFamily="@font/raleway"-->

<!--        android:hint="@string/enter_username"-->
<!--        android:inputType="text"-->
<!--        android:paddingStart="26dp"-->
<!--        android:paddingLeft="26dp"-->
<!--        android:paddingTop="14dp"-->

<!--        android:paddingBottom="14dp"-->
<!--        android:textColorHint="@color/grey_input"-->
<!--        android:textSize="22sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/enter_pw"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.497"-->

<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/signup" />-->

<!--    <EditText-->
<!--        android:id="@+id/enter_pw"-->
<!--        android:layout_width="300dp"-->
<!--        android:layout_height="59dp"-->
<!--        android:layout_marginStart="30dp"-->
<!--        android:layout_marginLeft="30dp"-->

<!--        android:layout_marginEnd="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:layout_marginBottom="46dp"-->
<!--        android:background="@drawable/bg_input"-->
<!--        android:drawableLeft="@drawable/lock"-->
<!--        android:drawablePadding="30dp"-->

<!--        android:ems="10"-->
<!--        android:fontFamily="@font/raleway"-->
<!--        android:hint="@string/enter_password"-->
<!--        android:inputType="text"-->
<!--        android:paddingLeft="26dp"-->

<!--        android:paddingTop="14dp"-->
<!--        android:paddingBottom="14dp"-->
<!--        android:textColorHint="@color/grey_input"-->

<!--        android:textSize="22sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/button"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/enter_email" />-->

<!--    <Button-->
<!--        android:id="@+id/button"-->
<!--        android:layout_width="230dp"-->
<!--        android:layout_height="59dp"-->

<!--        android:layout_marginBottom="43dp"-->
<!--        android:background="@drawable/bg_button"-->
<!--        android:fontFamily="@font/raleway"-->

<!--        android:hapticFeedbackEnabled="false"-->
<!--        android:text="@string/login"-->
<!--        android:textAllCaps="false"-->
<!--        android:textColor="@color/black"-->

<!--        android:textSize="24sp"-->
<!--        app:backgroundTint="@color/blue_theme"-->
<!--        app:cornerRadius="35dp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/textView"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/enter_pw" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:fontFamily="@font/raleway"-->
<!--        android:text="@string/don_t_have_an_account"-->
<!--        android:textColor="@color/black"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/sign_up"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.501"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/button" />-->

<!--    <TextView-->
<!--        android:id="@+id/sign_up"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_marginBottom="34dp"-->
<!--        android:fontFamily="@font/raleway"-->
<!--        android:text="@string/sign_up_underline"-->
<!--        android:textColor="@color/blue_link"-->

<!--        android:textColorLink="@color/blue_link"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/volume"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.545"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView" />-->

<!--    <ImageView-->
<!--        android:id="@+id/volume"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_marginStart="255dp"-->
<!--        android:layout_marginLeft="255dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginRight="16dp"-->
<!--        android:layout_marginBottom="35dp"-->

<!--        android:src="@drawable/volume_up"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toStartOf="@+id/setting"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->

<!--        app:layout_constraintTop_toBottomOf="@+id/sign_up" />-->

<!--    <ImageView-->
<!--        android:id="@+id/setting"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->

<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginEnd="35dp"-->
<!--        android:layout_marginRight="35dp"-->
<!--        android:layout_marginBottom="35dp"-->

<!--        android:src="@drawable/gear"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toEndOf="@+id/volume"-->

<!--        app:layout_constraintTop_toBottomOf="@+id/sign_up" />-->


<!--</androidx.constraintlayout.widget.ConstraintLayout>-->